After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 598703 - totem-video-thumbnailer no longer uses files embed into a mkv to create a thumbnail.
totem-video-thumbnailer no longer uses files embed into a mkv to create a thu...
Status: RESOLVED FIXED
Product: totem
Classification: Core
Component: Thumbnailer
2.28.x
Other Linux
: Normal normal
: ---
Assigned To: General Totem maintainer(s)
General Totem maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2009-10-16 16:57 UTC by nico1038
Modified: 2009-12-22 02:40 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
test file (810.68 KB, video/x-matroska)
2009-10-16 17:20 UTC, nico1038
Details

Description nico1038 2009-10-16 16:57:11 UTC
Hi,

I hope this is the right place to report.
I join a small mkv file with a cover.jpg file embed.


Other information:
Ubuntu 9.10
totem 2.28.1
Comment 1 nico1038 2009-10-16 17:20:57 UTC
Created attachment 145627 [details]
test file
Comment 2 brooklyn 2009-11-10 12:29:42 UTC
I can confirm this bug, see also https://bugs.launchpad.net/ubuntu/+source/totem/+bug/437580 .

totem-video-thumbnailer will create a preview thumbnail from the video instead of using the embedded jpg picture. This worked in Ubuntu 9.04, but not in 9.10 anymore.
Comment 3 Vincent Tschanz 2009-12-21 21:22:15 UTC
I comfirm too. Embedded pictures have been used as thumbnail in Ubunu 8.10 and 9.04, but not in 9.10.
The bug is marked as Fixed, how to correct that in Ubuntu 9.10?

thank you.
Comment 4 Bastien Nocera 2009-12-22 02:40:27 UTC
(In reply to comment #3)
> I comfirm too. Embedded pictures have been used as thumbnail in Ubunu 8.10 and
> 9.04, but not in 9.10.
> The bug is marked as Fixed, how to correct that in Ubuntu 9.10?

Update to Totem 2.28.4 or newer.