Fix thumbnailer not picking up covers for videos

When getting updated metadata, and we're in capture mode,
do send out the "got-metadata" signal otherwise
the thumbnailer will never know we got a cover.

https://bugzilla.gnome.org/show_bug.cgi?id=598703